# LLM-APP-Developer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  TESTING_INSTRUCTIONS.md  main.py  prompt.txt  pyproject.toml  requirements.txt
src/: config.py  create_repo.py  enable_github_pages.py  push_llm_code.py  round1.py  round2.py  utils.py  validate_secrets.py
