[project]
name = "llm-app-developer"
version = "0.1.0"
description = "Build and deploy web applications using LLM assistance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.37.0",
    "pydantic-ai>=0.0.1",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
